# xortool

./: .gitignore  README.md  pyproject.toml
xortool/: __init__.py  args.py  charset.py  routine.py  tool_main.py  tool_xor.py
