[project]
name = "xortool"
version = "1.1.0"
description = "A tool to analyze multi-byte xor cipher"
authors = [{ name = "hellman", email = "hellman@mathstodon.xyz" }]
license = "MIT"
readme = "README.md"
keywords = ["xor", "xortool", "cryptanalysis"]
classifiers = [
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Topic :: Security :: Cryptography',
]
requires-python = ">=3.6,<4.0"
dependencies = ["typer>=0.15.2", "rich>=14.0.0"]

[project.scripts]
xortool = 'xortool.tool_main:main'
xortool-xor = 'xortool.tool_xor:main'

[project.urls]
homepage = "http://github.com/hellman/xortool"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
# dev-dependencies = ["importlib_metadata ^4.8"]

# [build-system]
# requires = ["rye>=0.21.1"]
# build-backend = "rye.masonry.api"
